# mapfan-agent

./: .env.example  README.md  pyproject.toml
.github/workflows/: test.yml
docs/demos/: 2026-04-24-local-demo.md
src/mapfan_agent/: cli.py  client.py  config.py
src/mapfan_agent/ui/: output.py  repl.py
tests/: test_cli.py  test_client.py  test_config.py  test_output.py
