[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapfan-agent"
version = "0.2.0"
description = "CLI tool for MapFan geospatial AI agent services"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25",
    "httpx-sse>=0.4",
    "pydantic>=2.0",
    "rich>=13",
    "typer>=0.15",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "respx>=0.22",
]

[project.scripts]
mapfan-agent = "mapfan_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mapfan_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
